Fix image rendering on mobile in editor
Use 'contain' in order to not stretch images more than needed
on mobile

--- a/app/components/Editor/Blocks/ImageBlock.css
+++ b/app/components/Editor/Blocks/ImageBlock.css
@@ -7,6 +7,10 @@
   background-color: #ddd;
 }
 
+.image {
+  object-fit: contain;
+}
+
 .loader::before {
   display: block;
   position: absolute;
